ChatCITの機能を追加

--- a/.gitignore
+++ b/.gitignore
@@ -234,4 +234,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# machine learning models
+ml_model/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,visualstudiocode,node
